--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             <header>
                 <h2>My Contact Details</h2>
                 <img src="img/fb.jpg" align="right" alt="Skills" height="150" width="150px">
-                <img src="img/twitter.png." align="right" alt="Skills" height="200px" width="200px">
+                <img src="img/twitter.png" align="right" alt="Skills" height="200px" width="200px">
             </header>
 
             <content>
