--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
         <article class="topcontent">
             <header>
                 <h2>My Contact Details</h2>
+                <a href="https://twitter.com/?lang=en-gb"><img src="img/twitter.png" align="right" alt="Skills" height="200px" width="200px"></a>
                 <img src="img/fb.jpg" align="right" alt="Skills" height="150" width="150px">
-                <img src="img/twitter.png" align="right" alt="Skills" height="200px" width="200px">
             </header>
 
             <content>
