--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
 <div class="mainContent">
     <div class="content">
         <article class="topcontent">
-            <header>
+            <a>
                 <h2>My Contact Details</h2>
                 <a href="https://twitter.com/?lang=en-gb"><img src="img/twitter.png" align="right" alt="Skills" height="200px" width="200px"></a>
-                <img src="img/fb.jpg" align="right" alt="Skills" height="150" width="150px">
+                <a href="https://www.facebook.com/?_rdr"><img src="img/fb.jpg" align="right" alt="Skills" height="150" width="150px"></a>
             </header>
 
             <content>
